--- a/src/sass/common/_colors.scss
+++ b/src/sass/common/_colors.scss
@@ -3,4 +3,10 @@ $color-font: #1E3948;
 $color-link: #3097d1;
 $color-link-hover: #216a94;
 
+$color-border: #d3e0e9;
+$color-border-hover: darken($color-border, 10%);
+
 $color-blue: #3097d1;
+$color-blue-hover: darken($color-blue, 5%);
+
+$color-red: #e74c3c;
