--- a/src/sass/common/_fonts.scss
+++ b/src/sass/common/_fonts.scss
@@ -37,3 +37,4 @@
 $font-regular: 'brandon_grotesque_regularRg', sans-serif;
 $font-light: 'brandon_grotesquelight', sans-serif;
 $font-bold: 'brandon_grotesquebold', sans-serif;
+$font-classic: 'Helvetica Neue', 'Arial', sans-serif;
