--- a/src/sass/helpers/_partials.scss
+++ b/src/sass/helpers/_partials.scss
@@ -22,6 +22,7 @@
 
 %no-select{
 	cursor: default;
+	-webkit-user-select: none;
 	user-select: none;
 	pointer-events: none;
 }
@@ -32,6 +33,5 @@
 	font-size: inherit;
 	text-rendering: auto;
 	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 	transform: translate(0, 0);
 }
